# ROMAN

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: handmovementdirection_minirocket_demo.ipynb  uea_example.ipynb
src/roman/: __init__.py  operator.py
