[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roman-ts"
version = "0.1.0"
description = "Official ROMAN library for deterministic multiscale routing of time-series representations."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Gonzalo Uribarri" }
]
keywords = [
  "time series",
  "multiscale",
  "transformation",
  "classification",
  "rocket",
  "scikit-learn"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "numpy>=1.23",
  "scikit-learn>=1.2"
]

[project.optional-dependencies]
plot = [
  "matplotlib>=3.5"
]
examples = [
  "jupyter>=1.0.0",
  "matplotlib>=3.5",
  "pandas>=1.4",
  "sktime>=0.30.0"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
